--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -225,4 +225,17 @@
     <string name="remove_shortcut">¿Eliminar este acceso directo?</string>
     <string name="remove">Eliminar</string>
     <string name="invalid_config">Configuración no válida</string>
+    <string name="toolbox_button_text2">COMENZAR</string>
+    <string name="toolbox_ai">IA</string>
+<string name="toolbox_xodos">Xodos</string>
+<string name="toolbox_proot">Proot</string>
+<string name="toolbox_kali">Kali</string>
+<string name="toolbox_switch">Cambiar usuario</string>
+<string name="toolbox_settings">Ajustes</string>
+<string name="toolbox_wine_glibc">Wine-Glibc</string>
+<string name="toolbox_wine_bionic">Wine-Bionic</string>
+<string name="toolbox_xbox">Xbox</string>
+<string name="toolbox_backup">Copia de seguridad</string>
+<string name="toolbox_restore">Restaurar</string>
+<string name="toolbox_wine">Wine</string>
 </resources>
